Adds files & rough outlines for remaining chapters Just getting some linked up skeleton files in place for us to backfill

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,11 +61,6 @@
             </a>
           </li>
           <li>
-            <a href="application_structure">
-              Appication Structure
-            </a>
-          </li>
-          <li>
             <a href="turbolinks">
               Turbolinks
             </a>
@@ -76,8 +71,8 @@
             </a>
           </li>
           <li>
-            <a href="message_bus">
-              Cross Component Communication
+            <a href="managing_css">
+              Managing CSS with SCSS
             </a>
           </li>
           <li>
@@ -85,10 +80,31 @@
               Tying it all Together
             </a>
           </li>
-
-
-
-
+          <li>
+            <a href="message_bus">
+              Cross Component Communication
+            </a>
+          </li>
+          <li>
+            <a href="remote_responses">
+              Working with Remote Responses
+            </a>
+          </li>
+          <li>
+            <a href="global_libraries">
+              Integrating Global Libraries
+            </a>
+          </li>
+          <li>
+            <a href="integration_testing">
+              Testing Your Application
+            </a>
+          </li>
+          <li>
+            <a href="stimulus_unit_tests">
+              Testing Stimulus Controllers
+            </a>
+          </li>
         </ul>
       </aside>
     </div>
