Start of Testing chapter and some other tweaks

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -102,12 +102,12 @@
           </li>
           <li>
             <a href="integration_testing">
-              Testing Your Application
+              Integration Testing
             </a>
           </li>
           <li>
-            <a href="stimulus_unit_tests">
-              Testing Stimulus Controllers
+            <a href="unit_testing">
+              Unit Testing
             </a>
           </li>
         </ul>
