Adds a link & section for Persistant Javascript

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -91,6 +91,11 @@
             </a>
           </li>
           <li>
+            <a href="persistant_javascript">
+              Working With Persistant JS
+            </a>
+          </li>
+          <li>
             <a href="global_libraries">
               Integrating Global Libraries
             </a>
